--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -15,6 +15,7 @@
 
 {% import "_includes/forms" as forms %}
 
+{# <pre>{{ dump(placeDetails) }}</pre> #}
 {% do view.registerAssetBundle("ags\\placedetails\\assetbundles\\placedetails\\PlaceDetailsAsset") %}
 
 {{ forms.textField({
