--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -91,8 +91,8 @@
 
 <div class="field fullwidth">
     <p class="heading"><label>Preview Opening Hours</label></p>
-    <div><span class="pd-bold">Open now</span>: {{placeDetails.open_now}}</div>
-    {% for data in placeDetails.opening_hours %}
+    <div><span class="pd-bold">Open now</span>: {{placeDetails.open_now ?? ''}}</div>
+    {% for data in placeDetails.opening_hours ?? '' %}
     <div>{{data|raw}}</div>
     {% endfor %}
 </div>
